[gd_scene load_steps=3 format=3 uid="uid://dr07jouechxm7"]

[ext_resource type="Script" path="res://scenes/menus/character_select/player_box/PlayerBox.gd" id="1_idmn7"]
[ext_resource type="Texture2D" uid="uid://b3gj0hnapdy6i" path="res://icon.svg" id="1_juluy"]

[node name="PlayerBox" type="Control"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idmn7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_juluy")
expand_mode = 4
stretch_mode = 5

[node name="PlayerName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "PLAYER"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="set_device_id" from="." to="." method="_on_set_device_id"]
